--- a/compensating-transactions/pom.xml
+++ b/compensating-transactions/pom.xml
@@ -24,7 +24,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jboss.narayana.quickstart.compensatingtransactions</groupId>
   <artifactId>narayana-quickstarts-compensations</artifactId>
-  <version>5.5.25.Final-SNAPSHOT-SNAPSHOT</version>
+  <version>5.5.25.Final-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Compensating Transactions Examples</name>
   <description>All quickstarts of for usage of Compensations API</description>
