--- a/rts/at/jta-service/jpa/pom.xml
+++ b/rts/at/jta-service/jpa/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>org.jboss.narayana.quickstart.rts</groupId>
         <artifactId>restat-bridge</artifactId>
-        <version>5.5.26.Final-SNAPSHOT</version>
+        <version>5.5.26.Final</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -38,7 +38,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <properties>
-        <version.narayana>5.5.26.Final-SNAPSHOT</version.narayana>
+        <version.narayana>5.5.26.Final</version.narayana>
     </properties>
 
     <repositories>
