--- a/jta-1_2-standalone/pom.xml
+++ b/jta-1_2-standalone/pom.xml
@@ -42,7 +42,7 @@
         <version.jnpserver>5.0.3.GA</version.jnpserver>
         <version.junit>4.11</version.junit>
         <version.weld>2.3.4.Final</version.weld>
-        <version.jboss-transaction-spi>7.5.2.Final</version.jboss-transaction-spi>
+        <version.jboss-transaction-api>1.0.1.Final</version.jboss-transaction-api>
         <version.log4j>1.2.17</version.log4j>
     </properties>
 
@@ -73,15 +73,9 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>org.jboss</groupId>
-            <artifactId>jboss-transaction-spi</artifactId>
-            <version>${version.jboss-transaction-spi}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.jboss.logging</groupId>
-                    <artifactId>jboss-logging-spi</artifactId>
-                </exclusion>
-            </exclusions>
+          <groupId>org.jboss.spec.javax.transaction</groupId>
+          <artifactId>jboss-transaction-api_1.2_spec</artifactId>
+          <version>${version.jboss-transaction-api}</version>
         </dependency>
         <!-- Standalone JNDI server -->
         <dependency>
