--- a/jta-and-hibernate-standalone/pom.xml
+++ b/jta-and-hibernate-standalone/pom.xml
@@ -47,7 +47,7 @@
         <version.h2>1.4.191</version.h2>
         <version.hibernate>5.1.0.Final</version.hibernate>
         <version.weld>2.3.4.Final</version.weld>
-        <version.jboss-transaction-spi>7.5.2.Final</version.jboss-transaction-spi>
+        <version.jboss-transaction-api>1.0.1.Final</version.jboss-transaction-api>
         <version.log4j>1.2.17</version.log4j>
         <version.byteman>3.0.3</version.byteman>
     </properties>
@@ -79,15 +79,9 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>org.jboss</groupId>
-            <artifactId>jboss-transaction-spi</artifactId>
-            <version>${version.jboss-transaction-spi}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.jboss.logging</groupId>
-                    <artifactId>jboss-logging-spi</artifactId>
-                </exclusion>
-            </exclusions>
+          <groupId>org.jboss.spec.javax.transaction</groupId>
+          <artifactId>jboss-transaction-api_1.2_spec</artifactId>
+          <version>${version.jboss-transaction-api}</version>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
