--- a/ArjunaJTA/javax_transaction/pom.xml
+++ b/ArjunaJTA/javax_transaction/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <groupId>org.jboss.narayana.quickstart.jta</groupId>
     <artifactId>quickstarts</artifactId>
-    <version>5.6.3.Final</version>
+    <version>5.6.4.Final-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <description>
