--- a/XTS/raw-xts-api-demo/test/pom.xml
+++ b/XTS/raw-xts-api-demo/test/pom.xml
@@ -27,7 +27,7 @@
     <parent>
         <groupId>org.jboss.narayana.quickstarts.xts.demo</groupId>
         <artifactId>xts-demo-all</artifactId>
-        <version>5.6.3.Final</version>
+        <version>5.6.4.Final-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>xts-demo-test</artifactId>
