--- a/spring/narayana-spring-boot/pom.xml
+++ b/spring/narayana-spring-boot/pom.xml
@@ -36,6 +36,7 @@
         <version.org.springframework.boot>1.5.3.RELEASE</version.org.springframework.boot>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <narayana.version>${project.version}</narayana.version>
     </properties>
 
     <dependencyManagement>
@@ -47,7 +48,27 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-        </dependencies>
+            <dependency>
+              <groupId>org.jboss.narayana.jta</groupId>
+              <artifactId>jdbc</artifactId>
+              <version>${narayana.version}</version>
+            </dependency>
+            <dependency>
+              <groupId>org.jboss.narayana.jta</groupId>
+              <artifactId>jms</artifactId>
+              <version>${narayana.version}</version>
+            </dependency>
+            <dependency>
+              <groupId>org.jboss.narayana.jta</groupId>
+              <artifactId>jta</artifactId>
+              <version>${narayana.version}</version>
+            </dependency>
+            <dependency>
+              <groupId>org.jboss.narayana.jts</groupId>
+              <artifactId>narayana-jts-integration</artifactId>
+              <version>${narayana.version}</version>
+            </dependency>
+          </dependencies>
     </dependencyManagement>
 
     <dependencies>
