--- a/rts/lra/hotel-service/pom.xml
+++ b/rts/lra/hotel-service/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
@@ -79,22 +79,22 @@
                     </properties>
                 </configuration>
             </plugin>
-<!--
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <version>3.0.1</version>
-        <configuration>
-          <artifactItems>
-            <artifactItem>
-              <groupId>org.jboss.narayana.rts</groupId>
-              <artifactId>lra-coordinator</artifactId>
-              <version>${project.version}</version>
-            </artifactItem>
-          </artifactItems>
-        </configuration>
-      </plugin>
--->
+            <!--
+                  <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>3.0.1</version>
+                    <configuration>
+                      <artifactItems>
+                        <artifactItem>
+                          <groupId>org.jboss.narayana.rts</groupId>
+                          <artifactId>lra-coordinator</artifactId>
+                          <version>${project.version}</version>
+                        </artifactItem>
+                      </artifactItems>
+                    </configuration>
+                  </plugin>
+            -->
         </plugins>
     </build>
 
@@ -109,7 +109,7 @@
             <artifactId>transactions</artifactId>
         </dependency>
 
-         <!-- LRA JAXRS filters -->
+        <!-- LRA JAXRS filters -->
         <dependency>
             <groupId>org.jboss.narayana.rts</groupId>
             <artifactId>lra-filters</artifactId>
