--- a/pom.xml
+++ b/pom.xml
@@ -143,7 +143,7 @@
     <module>STM</module>
     <module>jts-docker</module>
     <!-- JBTM-2820 disable the osgi quickstart until the karaf release the 4.1.0-->
-    <!-- <module>karaf/osgi-jta</module> -->
+    <module>karaf/osgi-jta</module>
     <module>jta-and-hibernate-standalone</module>
   </modules>
 </project>
