--- a/at/integration/pom.xml
+++ b/at/integration/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.jboss.narayana.rts</groupId>
         <artifactId>restat</artifactId>
-        <version>5.7.1.Final</version>
+        <version>5.7.2.Final-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
