--- a/ArjunaJTS/recovery/pom.xml
+++ b/ArjunaJTS/recovery/pom.xml
@@ -35,6 +35,9 @@
   <packaging>jar</packaging>
   <name>JTS recovery</name>
 
+  <properties>
+    <version.org.jboss.jboss-transaction-spi>7.5.2.Final</version.org.jboss.jboss-transaction-spi>
+  </properties>
   <dependencies>
     <!-- For logging -->
     <dependency>
@@ -51,6 +54,11 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-jdk14</artifactId>
       <version>1.5.6</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss</groupId>
+      <artifactId>jboss-transaction-spi</artifactId>
+      <version>${version.org.jboss.jboss-transaction-spi}</version>
     </dependency>
   </dependencies>
 </project>
