--- a/pom.xml
+++ b/pom.xml
@@ -125,8 +125,7 @@
   </scm>
   <modules>
     <module>ArjunaJTS</module>
-    <module>transactionaldriver-and-tomcat</module>
-    <module>transactionaldriver-jpa-and-tomcat</module>
+    <module>transactionaldriver</module>
     <module>jca-and-tomcat</module>
     <module>jca-and-hibernate</module>
     <module>jta-1_2-standalone</module>
