--- a/jca-and-hibernate/pom.xml
+++ b/jca-and-hibernate/pom.xml
@@ -40,22 +40,22 @@
         <version.maven-compiler-plugin>3.1</version.maven-compiler-plugin>
         <version.org.jboss.ironjacamar>1.1.0.Beta5</version.org.jboss.ironjacamar>
         <version.com.github.fungal>0.11.0.RC1</version.com.github.fungal>
-        <version.org.hibernate>4.2.7.SP1</version.org.hibernate>
-        <version.org.hibernate.hibernate-validator>5.0.1.Final</version.org.hibernate.hibernate-validator>
+        <version.hibernate>4.2.7.SP1</version.hibernate>
+        <version.hibernate.hibernate-validator>5.0.1.Final</version.hibernate.hibernate-validator>
         <version.org.jboss.jboss-common-core>2.2.17.GA</version.org.jboss.jboss-common-core>
         <version.narayana>5.7.2.Final-SNAPSHOT</version.narayana>
-        <version.org.jboss.logging.jboss-logging>3.1.2.GA</version.org.jboss.logging.jboss-logging>
-        <version.org.jboss.logging.jboss-logging-spi>2.2.0.CR1</version.org.jboss.logging.jboss-logging-spi>
+        <version.jboss.logging>3.1.4.GA</version.jboss.logging>
+        <version.jboss.logging.spi>2.2.0.CR1</version.jboss.logging.spi>
         <version.org.jboss.logmanager-jboss-logmanager>1.4.0.Final</version.org.jboss.logmanager-jboss-logmanager>
         <version.org.jboss.logmanager-log4j-jboss-logmanager>1.0.1.Final</version.org.jboss.logmanager-log4j-jboss-logmanager>
         <version.org.jboss.stdio>1.0.1.GA</version.org.jboss.stdio>
         <version.org.jboss.threads>2.0.0.GA</version.org.jboss.threads>
         <version.org.jboss.jboss-transaction-spi>7.5.2.Final</version.org.jboss.jboss-transaction-spi>
-        <version.org.slf4j>1.6.1</version.org.slf4j>
+        <version.org.slf4j>1.7.2</version.org.slf4j>
         <version.org.jboss.slf4j>1.0.0.GA</version.org.jboss.slf4j>
         <version.org.jboss.naming>5.0.3.GA</version.org.jboss.naming>
         <version.org.jboss.jandex>1.0.3.Final</version.org.jboss.jandex>
-        <version.log4j>1.2.16</version.log4j>
+        <version.log4j>1.2.17</version.log4j>
         <version.org.picketbox>4.0.18.Final</version.org.picketbox>
         <version.org.jgroups>3.2.7.Final</version.org.jgroups>
         <version.org.jboss.shrinkwrap>1.0.1</version.org.jboss.shrinkwrap>
@@ -67,8 +67,8 @@
         <version.de.odysseus.juel>2.2.6</version.de.odysseus.juel>
         <version.postgresql>9.1-901.jdbc4</version.postgresql>
         <version.commons-logging>1.1.0.jboss</version.commons-logging>
-        <version.com.h2database>1.3.171</version.com.h2database>
-        <version.junit>4.10</version.junit>
+        <version.h2>1.3.171</version.h2>
+        <version.junit>4.12</version.junit>
     </properties>
 
     <repositories>
@@ -95,12 +95,12 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>${version.org.hibernate}</version>
+            <version>${version.hibernate}</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
-            <version>${version.org.hibernate}</version>
+            <version>${version.hibernate}</version>
         </dependency>
 
         <!-- IronJacamar Core Dependencies -->
@@ -122,7 +122,7 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>${version.org.hibernate.hibernate-validator}</version>
+            <version>${version.hibernate.hibernate-validator}</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.ironjacamar</groupId>
@@ -212,12 +212,12 @@
         <dependency>
             <groupId>org.jboss.logging</groupId>
             <artifactId>jboss-logging</artifactId>
-            <version>${version.org.jboss.logging.jboss-logging}</version>
+            <version>${version.jboss.logging}</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.logging</groupId>
             <artifactId>jboss-logging-spi</artifactId>
-            <version>${version.org.jboss.logging.jboss-logging-spi}</version>
+            <version>${version.jboss.logging.spi}</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.logmanager</groupId>
@@ -363,7 +363,7 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>${version.com.h2database}</version>
+            <version>${version.h2}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
