--- a/rts/at/undertow/pom.xml
+++ b/rts/at/undertow/pom.xml
@@ -27,9 +27,9 @@
 
     <properties>
         <version.narayana>5.7.2.Final-SNAPSHOT</version.narayana>
-        <version.org.jboss.logging.jboss-logging>3.2.1.Final</version.org.jboss.logging.jboss-logging>
+        <version.jboss.logging>3.1.4.GA</version.jboss.logging>
         <undertow.io.version>1.3.0.Beta6</undertow.io.version>
-        <resteasy.version>3.0.11.Final</resteasy.version>
+        <version.resteasy>3.0.23.Final</version.resteasy>
     </properties>
 
     <repositories>
@@ -70,7 +70,7 @@
         <dependency>
             <groupId>org.jboss.logging</groupId>
             <artifactId>jboss-logging</artifactId>
-            <version>${version.org.jboss.logging.jboss-logging}</version>
+            <version>${version.jboss.logging}</version>
         </dependency>
 
         <dependency>
@@ -86,7 +86,7 @@
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-undertow</artifactId>
-            <version>${resteasy.version}</version>
+            <version>${version.resteasy}</version>
         </dependency>
     </dependencies>
 
