--- a/spring/jta/pom.xml
+++ b/spring/jta/pom.xml
@@ -41,15 +41,15 @@
         <maven.compiler.target>1.7</maven.compiler.target>
         <maven.compiler.source>1.7</maven.compiler.source>
         <version.maven-compiler-plugin>3.1</version.maven-compiler-plugin>
-        <version.maven-surefire-plugin>2.9</version.maven-surefire-plugin>
+        <version.maven-surefire-plugin>2.19.1</version.maven-surefire-plugin>
         <version.org.springframwork>4.2.0.RELEASE</version.org.springframwork>
         <version.narayana>5.7.2.Final-SNAPSHOT</version.narayana>
-        <version.org.jboss.logging.jboss-logging>3.1.2.GA</version.org.jboss.logging.jboss-logging>
-        <version.log4j>1.2.16</version.log4j>
+        <version.jboss.logging>3.1.4.GA</version.jboss.logging>
+        <version.log4j>1.2.17</version.log4j>
         <version.org.jboss.spec.javax.transaction>1.0.1.Final</version.org.jboss.spec.javax.transaction>
         <version.org.jboss.jboss-transaction-spi>7.5.2.Final</version.org.jboss.jboss-transaction-spi>
-        <version.com.h2database>1.3.171</version.com.h2database>
-        <version.junit>4.10</version.junit>
+        <version.h2>1.3.171</version.h2>
+        <version.junit>4.12</version.junit>
     </properties>
 
     <repositories>
@@ -108,7 +108,7 @@
         <dependency>
             <groupId>org.jboss.logging</groupId>
             <artifactId>jboss-logging</artifactId>
-            <version>${version.org.jboss.logging.jboss-logging}</version>
+            <version>${version.jboss.logging}</version>
         </dependency>
         <dependency>
             <groupId>org.jboss</groupId>
@@ -130,7 +130,7 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>${version.com.h2database}</version>
+            <version>${version.h2}</version>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
