--- a/spring/stock-market-with-narayana-spring-boot/pom.xml
+++ b/spring/stock-market-with-narayana-spring-boot/pom.xml
@@ -39,11 +39,12 @@
     </parent>
 
     <properties>
+        <narayana.version>${project.version}</narayana.version>
+        <jboss-transaction-spi.version>7.5.2.Final</jboss-transaction-spi.version>
+
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <narayana.version>5.5.1.Final</narayana.version>
-        <jboss-transaction-spi.version>7.5.2.Final</jboss-transaction-spi.version>
     </properties>
 
     <dependencies>
