--- a/ArjunaJTS/recovery/pom.xml
+++ b/ArjunaJTS/recovery/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <groupId>org.jboss.narayana.quickstart.jts</groupId>
     <artifactId>narayana-quickstarts-jts</artifactId>
-    <version>5.5.31.Final</version>
+    <version>5.5.32.Final-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <description>
