--- a/jca-and-tomcat/pom.xml
+++ b/jca-and-tomcat/pom.xml
@@ -77,6 +77,7 @@
         <version.commons-logging>1.1.0.jboss</version.commons-logging>
         <version.h2>1.3.171</version.h2>
         <version.junit>4.12</version.junit>
+        <version.org.jboss.spec.javax.transaction>1.0.0.Final</version.org.jboss.spec.javax.transaction>
     </properties>
 
     <repositories>
@@ -99,6 +100,12 @@
     </repositories>
 
     <dependencies>
+        <dependency>
+            <groupId>org.jboss.spec.javax.transaction</groupId>
+            <artifactId>jboss-transaction-api_1.2_spec</artifactId>
+            <version>${version.org.jboss.spec.javax.transaction}</version>
+            <scope>provided</scope>
+        </dependency>
         <!-- JSF dependencies -->
         <dependency>
             <groupId>com.sun.faces</groupId>
