--- a/transactionaldriver/transactionaldriver-jpa-and-tomcat/pom.xml
+++ b/transactionaldriver/transactionaldriver-jpa-and-tomcat/pom.xml
@@ -12,12 +12,19 @@
         <version.resteasy>3.0.23.Final</version.resteasy>
         <version.hibernate>5.1.7.Final</version.hibernate>
         <version.h2>1.4.195</version.h2>
+        <version.org.jboss.spec.javax.transaction>1.0.0.Final</version.org.jboss.spec.javax.transaction>
         <version.tomcat.plugin>2.2</version.tomcat.plugin>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.jboss.spec.javax.transaction</groupId>
+            <artifactId>jboss-transaction-api_1.2_spec</artifactId>
+            <version>${version.org.jboss.spec.javax.transaction}</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.jboss.narayana.tomcat</groupId>
             <artifactId>tomcat-jta</artifactId>
