--- a/spring/stock-market-with-narayana-spring-boot/pom.xml
+++ b/spring/stock-market-with-narayana-spring-boot/pom.xml
@@ -26,7 +26,7 @@
 
     <groupId>org.jboss.narayana.quickstart.spring</groupId>
     <artifactId>stock-market-with-narayana-spring-boot</artifactId>
-    <version>5.5.32.Final-SNAPSHOT</version>
+    <version>5.5.32.Final</version>
     <packaging>jar</packaging>
 
     <name>stock-market-with-narayana-spring-boot</name>
