--- a/transactionaldriver/transactionaldriver-jpa-and-tomcat/pom.xml
+++ b/transactionaldriver/transactionaldriver-jpa-and-tomcat/pom.xml
@@ -8,7 +8,6 @@
     <packaging>war</packaging>
 
     <properties>
-        <version.narayana>5.9.1.Final-SNAPSHOT</version.narayana>
         <version.resteasy>3.0.23.Final</version.resteasy>
         <version.hibernate>5.1.7.Final</version.hibernate>
         <version.h2>1.4.195</version.h2>
@@ -28,7 +27,7 @@
         <dependency>
             <groupId>org.jboss.narayana.tomcat</groupId>
             <artifactId>tomcat-jta</artifactId>
-            <version>${version.narayana}</version>
+            <version>5.9.0.Final</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
