--- a/ArjunaJTA/object_store/pom.xml
+++ b/ArjunaJTA/object_store/pom.xml
@@ -23,7 +23,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <groupId>org.jboss.narayana.quickstart.jta</groupId>
-    <artifactId>quickstarts</artifactId>
+    <artifactId>narayana-quickstarts-jta</artifactId>
     <version>5.9.1.Final-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
@@ -38,9 +38,89 @@
   <dependencies>
     <!-- For logging -->
     <dependency>
-    <groupId>org.jboss.logging</groupId>
-    <artifactId>jboss-logging</artifactId>
-    <version>3.1.0.GA</version>
+       <groupId>org.wildfly.core</groupId>
+       <artifactId>wildfly-logging</artifactId>
+       <version>5.0.0.Beta5</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.activemq</groupId>
+      <artifactId>artemis-journal</artifactId>
+      <version>1.5.5.jbossorg-008</version>
     </dependency>
   </dependencies>
+
+  <profiles>
+    <profile>
+      <id>unix</id>
+      <activation>
+        <os>
+          <family>unix</family>
+        </os>
+        <property>
+          <name>!skipTests</name> 
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>Run tests</id>
+                <phase>integration-test</phase>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+                <configuration>
+                  <executable>bash</executable>
+                  <commandlineArgs>${basedir}/run.sh</commandlineArgs>
+                  <environmentVariables>
+                    <QUICKSTART_NARAYANA_VERSION>${version.narayana}</QUICKSTART_NARAYANA_VERSION>
+                  </environmentVariables>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>windows</id>
+      <activation>
+        <os>
+          <family>windows</family>
+        </os>
+        <property>
+          <name>!skipTests</name> 
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-antrun-plugin</artifactId>
+             <version>1.6</version>
+             <executions>
+               <execution>
+                 <phase>integration-test</phase>
+                 <configuration>
+                   <target>
+                     <exec dir="${project.basedir}" executable="cmd.exe" failonerror="true">
+                       <arg value="/c"/>
+                       <arg value="run.bat"/>
+                       <env key="QUICKSTART_NARAYANA_VERSION" value="${version.narayana}" />
+                     </exec>
+                   </target>
+                 </configuration>
+                 <goals>
+                   <goal>run</goal>
+                 </goals>
+               </execution>
+            </executions>      
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
