--- a/ArjunaJTS/recovery/pom.xml
+++ b/ArjunaJTS/recovery/pom.xml
@@ -61,4 +61,80 @@
       <version>${version.org.jboss.jboss-transaction-spi}</version>
     </dependency>
   </dependencies>
+
+  <profiles>
+    <profile>
+      <id>unix</id>
+      <activation>
+        <os>
+          <family>unix</family>
+        </os>
+        <property>
+          <name>!skipTests</name> 
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>Run tests</id>
+                <phase>integration-test</phase>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+                <configuration>
+                  <executable>bash</executable>
+                  <commandlineArgs>${basedir}/run.sh</commandlineArgs>
+                  <environmentVariables>
+                    <QUICKSTART_NARAYANA_VERSION>${version.narayana}</QUICKSTART_NARAYANA_VERSION>
+                  </environmentVariables>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>windows</id>
+      <activation>
+        <os>
+          <family>windows</family>
+        </os>
+        <property>
+          <name>!skipTests</name> 
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-antrun-plugin</artifactId>
+             <version>1.6</version>
+             <executions>
+               <execution>
+                 <phase>integration-test</phase>
+                 <configuration>
+                   <target>
+                     <exec dir="${project.basedir}" executable="cmd.exe" failonerror="true">
+                       <arg value="/c"/>
+                       <arg value="run.bat"/>
+                       <env key="QUICKSTART_NARAYANA_VERSION" value="${version.narayana}" />
+                     </exec>
+                   </target>
+                 </configuration>
+                 <goals>
+                   <goal>run</goal>
+                 </goals>
+               </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
+
 </project>
